// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should render correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#D738471A",
      "borderColor": "#d73847",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
  variant="Alert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <SvgMock
      color="#d73847"
      height={24}
      name="Danger"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      width={24}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Title
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Sample Banner Description
    </Text>
  </View>
</View>
`;

exports[`Banner should render correctly with a close button 1`] = `
<View
  style={
    {
      "backgroundColor": "#D738471A",
      "borderColor": "#d73847",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
  variant="Alert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <SvgMock
      color="#d73847"
      height={24}
      name="Danger"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      width={24}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Title
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Sample Banner Description
    </Text>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#0376c9",
          "borderRadius": 0,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "center",
          "paddingHorizontal": 0,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#0376c9",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        Test Action Button
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "marginLeft": 12,
      }
    }
  >
    <TouchableOpacity
      accessible={true}
      activeOpacity={1}
      disabled={false}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 8,
          "height": 24,
          "justifyContent": "center",
          "opacity": 1,
          "width": 24,
        }
      }
      testID="banner-close-button-icon"
    >
      <SvgMock
        color="#141618"
        height={16}
        name="Close"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
        width={16}
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Banner should render correctly with a start accessory 1`] = `
<View
  style={
    {
      "backgroundColor": "#D738471A",
      "borderColor": "#d73847",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
  variant="Alert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Test Start accessory
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Title
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Sample Banner Description
    </Text>
  </View>
</View>
`;

exports[`Banner should render correctly with an action button 1`] = `
<View
  style={
    {
      "backgroundColor": "#D738471A",
      "borderColor": "#d73847",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
  variant="Alert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <SvgMock
      color="#d73847"
      height={24}
      name="Danger"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      width={24}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 16,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Title
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#141618",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
    >
      Sample Banner Description
    </Text>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#0376c9",
          "borderRadius": 0,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "center",
          "paddingHorizontal": 0,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#0376c9",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 22,
          }
        }
      >
        Test Action Button
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
